[package]
name = "rustsight"
version = "1.1.2"
edition = "2024"
description = "A fast, safe CLI tool for dataset analysis and validation. Analyzes CSV files for column types, missing values, basic statistics (min/max/mean), outliers, no-variance columns, and mixed-type columns — helping you catch data quality issues before ML/AI training. Also supports binary and text file introspection."
license = "MIT"
repository = "https://github.com/omarnahdi/Dataset-Analyzer"
homepage = "https://omarnahdi.dev/work/dataset-analyzer"
readme = "README.md"
keywords = ["csv", "dataset", "analysis", "validation", "cli"]
categories = ["command-line-utilities", "parser-implementations"]
exclude = ["*.csv", "*.txt", ".idea/", "src/boilerplate.rs"]

[dependencies]
csv = "1.4.0"

[[bin]]
name = "rustsight"
path = "src/main.rs"